# gstreamer-derive

./: Cargo.toml  TODO.md  notes.md
examples/: simple.rs  simple2.rs
src/: lib.rs  utils.rs
src/attributes/: count.rs  link.rs  mod.rs  name.rs  property.rs
