[package]
name = "gstreamer-derive"
version = "0.1.0"
edition = "2018"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.27"
quote = "1.0"
syn = { version = "1.0.73", features = ["derive", "parsing", "printing"] }
gstreamer = { path = "../gstreamer-rs/gstreamer" }
itertools = "0.10.1"
heck = "0.3.3"

[lib]
proc-macro = true

[features]
check-config = []
